@@ -5,6 +5,7 @@ PHP                                                                        NEWS
 - Core:
   . Fixed bug #70912 (Null ptr dereference instantiating class with invalid
     array property). (Laruence)
+  . Fixed bug #70910 (extract() breaks variable references). (Laruence)
   . Fixed bug #70898, #70895 (null ptr deref and segfault with crafted callable).
     (Anatol, Laruence)
 
